using semantic tags, improving readability and small fixes

--- a/parkflow-web/src/app/components/dashboard/dashboard.scss
+++ b/parkflow-web/src/app/components/dashboard/dashboard.scss
@@ -91,7 +91,7 @@
     }
   }
 
-	.status span {
+	.status-icon span {
 		font-size: 2rem;
 		color: var(--primary-green);
 	}
@@ -99,7 +99,7 @@
   &.occupied {
     border-left-color: var(--primary-red);
 
-    .status span {
+    .status-icon span {
 			color: var(--primary-red);
 		}
   }
@@ -330,7 +330,6 @@
 .license-plate {
 	font-weight: bold;
 	color: var(--primary-text);
-	margin: 5px 0;
 	letter-spacing: 1px;
 	font-family: var(--license-plate-font);
 }
@@ -347,7 +346,7 @@
   font-size: 1.6rem !important;
 }
 
-.warning-notice {
+.warning-box {
   background: #fff3cd;
   color: #856404;
   padding: 10px;
@@ -356,7 +355,7 @@
   border: 1px solid #ffeeba;
 }
 
-.error-message {
+.error-text {
   color: var(--primary-red);
   font-size: 0.75rem;
   animation: fadeIn 0.2s ease-in;
